modified utralytics package name

--- a/bohb_tune.ipynb
+++ b/bohb_tune.ipynb
@@ -169,15 +169,14 @@
     }
    ],
    "source": [
+    "# upgrade pip\n",
+    "!pip install --upgrade pip\n",
+    "# install the latest version of ultralytics\n",
+    "!pip install -U ultralytics albumentations, optuna, huggingface-hub\n",
     "# clone the ADIS repository\n",
     "!git clone https://github.com/sathishkumar67/ADIS.git\n",
     "# move the files to the current directory\n",
-    "!mv /kaggle/working/ADIS/* /kaggle/working/\n",
-    "# upgrade pip\n",
-    "!pip install --upgrade pip\n",
-    "# install the required packages\n",
-    "!pip install  -r requirements.txt \n",
-    "!pip install -U ultralytics"
+    "!mv /kaggle/working/ADIS/* /kaggle/working/"
    ]
   },
   {
