--- a/yolov11n-bohb-tune.ipynb
+++ b/yolov11n-bohb-tune.ipynb
@@ -4653,7 +4653,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dl",
    "language": "python",
    "name": "python3"
   },
@@ -4667,7 +4667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.9.21"
   },
   "papermill": {
    "default_parameters": {},
@@ -4754,13 +4754,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_a519d2a670c44982a5f58ece9e8dfb66",
-       "max": 7041638232.0,
-       "min": 0.0,
+       "max": 7041638232,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_4e6da336b5694c0ead7c0eb11224ac0b",
        "tabbable": null,
        "tooltip": null,
-       "value": 7041638232.0
+       "value": 7041638232
       }
      },
      "4e6da336b5694c0ead7c0eb11224ac0b": {
